--- a/experiments/exp2a_config.yaml
+++ b/experiments/exp2a_config.yaml
@@ -1,23 +1,11 @@
 experiment:
   output_root: results/exp2a_stochastic_vol
-  T: 60
+  T: 30
   batch_size: 100
   seeds: [42, ]
   pair_particles: true
   calc_ekf_jacobian_error: false
-  plot_state: true
-  plot_seed0_only: true
-  show_plots: true
-  plot_interactive: true
-  plot_time_gap: 5
-  plot_pf_ess: true
-  plot_pf_ess_seed0_only: true
-  plot_pf_ess_show: true
-  plot_pf_ess_percentiles: [10, 90]
-  plot_stability: true
-  plot_stability_seed0_only: true
-  plot_stability_show: false
-  plot_stability_percentiles: [25, 75]
+  plot_show: false
 model:
   alpha: 0.99
   mu: 0.1
@@ -27,7 +15,8 @@ model:
   sigmas: [0.6]
   obs_modes: [logy2, ]
 filters:
-  methods: [ekf, ukf, pf, edh, ledh, edh(pfpf), edh(pfpf), kflow_diag, kflow_scalar]
+  methods:
+    [edh, ledh, edh(pfpf), ledh(pfpf), edh(pfpf_opt), ledh(pfpf_opt), edh(opt), ledh(opt)]
   ukf:
     alpha: 1e-1
     beta: 2.0
@@ -38,23 +27,37 @@ filters:
     ess_threshold: 0.5
     reweight: auto
   flow:
-    num_particles: [200]
-    num_lambda: 100
+    num_particles: [50]
+    num_lambda: 200
     ess_threshold: 0.5
     reweight: never
+    beta_schedule_opt:
+      mode: optimal
+      mu: 0.1
   kflow:
     optimizer: [adam]
     optimizer_eps: [1e-6]
     optimizer_beta_1: [0.9]
     optimizer_beta_2: [0.999]
     num_particles: [50]
-    num_lambda: [100]
+    num_lambda: [200]
     alpha: [0.1]
     ll_grad_mode: [dist]
     alpha_update_every: [40]
     ds_init: [0.05]
     max_flow_norm: [5.0]
     localization_radius: [null]
+  stochastic_pf:
+    num_particles: 50
+    num_lambda: 200
+    ess_threshold: 0.5
+    reweight: never
+    resample: never
+    diffusion: [0.1]
+    beta_schedule:
+      mode: optimal
+      mu: 0.1
+    jitter: 1e-6
 init:
   m0: [0.0]
   P0: [[1.0]]
